# signate-titanic

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml
configs/: default.yaml
data/raw/: sample_submit.csv
docs/: index.md  results.md
docs/experiments/: 01_preprocess.md  02_feature_lab.md  10_logreg.md  11_rf.md  12_xgb.md  13_lgbm.md  14_nn.md  20_ensemble.md  21_tuning.md  22_feature_review.md  23_hp_retune_domain_missing.md  25_advanced_stacking.md  28_rank_ensemble.md  29_target_encoding.md  30_calibration.md  36_hard_case_analysis.md  index.md
docs/stylesheets/: extra.css
experiments/00_eda/: README.md  eda_comprehensive.ipynb  titanic_tutorial_basic.ipynb  titanic_tutorial_beginner.ipynb  train_test_distribution.ipynb
experiments/01_preprocess/: baseline_preprocess.ipynb
experiments/02_feature_lab/: feature_experiment.ipynb
experiments/10_logreg/: README.md  baseline_logreg.ipynb
experiments/11_rf/: README.md  baseline_rf.ipynb
experiments/12_xgb/: README.md  baseline_xgb.ipynb
experiments/13_lgbm/: README.md  baseline_lgbm.ipynb
experiments/14_nn/: README.md  baseline_nn.ipynb
experiments/20_ensemble/: README.md  baseline_ensemble.ipynb
experiments/21_tuning/: README.md  hp_tuning.ipynb  hp_tuning.py
experiments/22_feature_review/: README.md  distribution_analysis.ipynb  distribution_analysis.py  (+2 more)
scripts/: analyze_predictions.py  build_docs.py  evaluate_submission.py  plot_scores.py
src/: config.py  data.py  evaluation.py  exp_features.py  features.py  utils.py
(+38 files in other folders)
